Add profile image upload functionality and related configurations
- Update User model to include profileImageUrl
- Implement profile image upload endpoint in UserController
- Add file upload validation and handling in UserService
- Configure application properties for file upload limits
- Update .gitignore to exclude uploaded files
- Add WebConfig for serving uploaded images

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,10 @@ logging.logback.rollingpolicy.max-history=30
 # Log pattern - Cleaner format
 logging.pattern.console=%d{HH:mm:ss.SSS} %-5level %logger{20} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level %logger{36} - %msg%n
+# File Upload Configuration
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+spring.servlet.multipart.enabled=true
+spring.web.resources.static-locations=classpath:/static/,file:src/main/resources/static/
+# Application Base URL for image serving
+app.base-url=http://localhost:8082
