Update application.properties to correct JDBC URL format for PostgreSQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,8 @@ spring.application.name=SpringBootProject
 # Server Configuration
 server.port=8082
 # Database Configuration
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
